--- a/about.html
+++ b/about.html
@@ -510,7 +510,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="mainNav">
           <ul class="navbar-nav gap-3">
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="#footer-contact" class="nav-link">Contact Us</a></li>
+            <li class="nav-item"><a href="#footer-contact" class="nav-link">Contact</a></li>
           </ul>
         </div>
 
@@ -533,13 +533,13 @@
     <div class="row align-items-center">
       <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade-right">
         <h2 class="section-title">The R&M Story</h2>
-        <p class="lead">Founded in 1995, R&M Denim Wear Ltd. has been at the forefront of denim innovation for over two decades.</p>
+        <p class="lead">Founded in 2016, R&M Denim Wear Ltd. has been at the forefront of denim innovation for over two decades.</p>
         <p>What began as a small workshop with a passion for quality craftsmanship has evolved into a globally recognized denim brand, without ever compromising on our core values.</p>
         <p>We believe that exceptional denim is more than just fabric—it's a canvas for self-expression, a testament to durability, and a commitment to sustainable luxury.</p>
       </div>
       <div class="col-lg-6" data-aos="fade-left">
         <div class="about-image">
-          <img src="https://images.unsplash.com/photo-1585155770447-2f66e2a397b5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1169&q=80" alt="R&M Denim Craftsmanship" class="img-fluid rounded shadow">
+          <img src="resources/about.jpg" alt="R&M Denim Craftsmanship" class="img-fluid rounded shadow">
         </div>
       </div>
     </div>
@@ -625,22 +625,7 @@
     <div class="timeline">
       <div class="timeline-item" data-aos="fade-right">
         <div class="timeline-dot"></div>
-        <h4>1995</h4>
-        <p>R&M Denim Wear Ltd. founded with a vision to create premium denim wear</p>
-      </div>
-      <div class="timeline-item" data-aos="fade-left">
-        <div class="timeline-dot"></div>
-        <h4>2002</h4>
-        <p>Opened our first dedicated denim factory with state-of-the-art equipment</p>
-      </div>
-      <div class="timeline-item" data-aos="fade-right">
-        <div class="timeline-dot"></div>
-        <h4>2008</h4>
-        <p>Launched our sustainable denim line using organic cotton and eco-friendly processes</p>
-      </div>
-      <div class="timeline-item" data-aos="fade-left">
-        <div class="timeline-dot"></div>
-        <h4>2015</h4>
+        <h4>2016</h4>
         <p>Expanded to international markets across Europe and North America</p>
       </div>
       <div class="timeline-item" data-aos="fade-right">
@@ -696,26 +681,14 @@
       <h2 class="section-title center-title">Our Leadership</h2>
       <p class="lead">The visionaries behind our denim revolution</p>
     </div>
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="col-md-4">
         <div class="team-member" data-aos="fade-up">
-          <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" alt="CEO" class="team-img">
-          <h4>Robert Chen</h4>
-          <p>Founder & CEO</p>
+          <img src="resources/cm.jpg" alt="MD" class="team-img">
+          <h4>Masuma Islam</h4>
+          <p>Managing Director</p>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="team-member" data-aos="fade-up" data-aos-delay="100">
-          <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=688&q=80" alt="Head Designer" class="team-img">
-          <h4>Maya Rodriguez</h4>
-          <p>Creative Director</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="team-member" data-aos="fade-up" data-aos-delay="200">
-          <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" alt="Production Head" class="team-img">
-          <h4>James Thompson</h4>
-          <p>Production Head</p>
         </div>
       </div>
     </div>
@@ -723,52 +696,42 @@
 </section>
 
 <!-- Footer -->
-<footer>
-  <div class="container" id="footer-contact">
-    <div class="row">
-      <!-- Branding Column -->
-      <div class="col-lg-4 mb-4 fade-in">
-        <p class="text-muted">R&M Denim Limited.</p>
-        <div class="social-icons mt-4">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-      </div>
+  <footer>
+    <div class="container" id="footer-contact">
+<div class="row">
+  <!-- Branding Column -->
+  <div class="col-lg-4 mb-4 fade-in">
+    <p class="text-muted">R&M Denim Limited.</p>
+  </div>
 
-      <!-- Contact Us -->
-      <div class="col-lg-4 col-md-4 mb-4 footer-links fade-in">
-        <h5>Contact Us</h5>
-        <ul class="text">
-          <li><i class="fas fa-map-marker-alt me-2"></i> House No.31, Road No.29, Sector No.7, Uttara, Dhaka-1230, Bangladesh</li>
-          <li><i class="fas fa-phone me-2"></i> +880 1616666776, +880 1738882466</li>
-          <li><i class="fas fa-envelope me-2"></i> masuma@jmgbd.com</li>
-        </ul>
-      </div>
 
-      <!-- 📍 Google Maps Column -->
-      <div class="col-lg-4 col-md-4 mb-4 fade-in">
-        <h5>Our Location</h5>
-        <div class="ratio ratio-4x3">
-          <iframe
-            src="https://www.google.com/maps?q=House+No.31,+Road+No.29,+Sector+No.7,+Uttara,+Dhaka-1230,+Bangladesh&output=embed"
-            allowfullscreen
-            loading="lazy"
-            style="border:0;">
-          </iframe>
-        </div>
-      </div>
-    </div>
-
-    <div class="copyright text-center">
-      <p class="text mb-0">
-        <span class="d-block d-md-inline">&copy; 2025 R&M Denim. All rights reserved.</span>
-        <span class="d-block mt-2 d-md-inline ms-md-2">Developed by: <strong>Sarzil Safoan</strong></span>
-      </p>
+  <!-- 📍 Google Maps Column (Now Last) -->
+  <div class="col-lg-4 col-md-4 mb-4 fade-in">
+    <h5>Our Location</h5>
+    <ul class="text">
+      <li><i class="fas fa-map-marker-alt me-2"></i> House No.31, Road No.29, Sector No.7, Uttara, Dhaka-1230, Bangladesh</li>
+    </ul>
+    <div class="ratio ratio-4x3">
+      <iframe
+        src="https://www.google.com/maps?q=House+No.31,+Road+No.29,+Sector+No.7,+Uttara,+Dhaka-1230,+Bangladesh&output=embed"
+        allowfullscreen
+        loading="lazy"
+        style="border:0;">
+      </iframe>
     </div>
   </div>
-</footer>
+</div>
+
+<div class="copyright text-center">
+  <p class="text mb-0">
+    <span class="d-block d-md-inline">&copy; 2025 R&M Denim. All rights reserved.</span>
+    <span class="d-block mt-2 d-md-inline ms-md-2">Developed by: <strong>Sarzil Safoan</strong></span>
+  </p>
+</div>
+
+    </div>
+  </footer>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
