--- a/factory.html
+++ b/factory.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="mainNav">
           <ul class="navbar-nav gap-3">
             <li class="nav-item"><a href="index.html#" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="#footer-contact" class="nav-link">Contact Us</a></li>
+            <li class="nav-item"><a href="#footer-contact" class="nav-link">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -36,7 +36,7 @@
 </header>
 
 <!-- Hero Section -->
-<section class="hero-image text-center text-white d-flex align-items-center" style="background-image: url('resources/factory-hero.jpg'); background-size: cover; background-position: center;">
+<section class="hero-image text-center text-white d-flex align-items-center" style="background-image: url('resources/story.JPG'); background-size: cover; background-position: center;">
   <div class="container py-5">
     <h2 class="display-5 fw-bold">Inside R&M Denim</h2>
     <p class="lead">Where craftsmanship meets precision — explore our in-house production units.</p>
@@ -52,7 +52,7 @@
       <!-- Cutting Unit -->
       <div class="col-md-4 fade-in">
         <div class="card h-100 shadow-sm">
-          <img src="resources/cutting.jpg" class="card-img-top" alt="Cutting Unit">
+          <img src="resources/cutting.JPG" class="card-img-top" alt="Cutting Unit">
           <div class="card-body">
             <h5 class="card-title">Cutting Unit</h5>
             <p class="card-text">Precision cutting with automated layering systems ensures consistency across every batch.</p>
@@ -74,7 +74,7 @@
       <!-- Washing Plant -->
       <div class="col-md-4 fade-in">
         <div class="card h-100 shadow-sm">
-          <img src="resources/washing.jpg" class="card-img-top" alt="Washing Plant">
+          <img src="resources/washing.JPG" class="card-img-top" alt="Washing Plant">
           <div class="card-body">
             <h5 class="card-title">Washing Plant</h5>
             <p class="card-text">Eco-friendly washing processes that bring out the perfect fade, texture, and softness in denim.</p>
@@ -87,38 +87,42 @@
 </section>
 
 <!-- Footer -->
-<footer class="bg-dark text-white py-4">
-  <div class="container" id="footer-contact">
-    <div class="row">
-      <div class="col-md-4 mb-3">
-        <h5>R&M Denim Ltd.</h5>
-        <p class="small">Crafting quality denim with care and precision.</p>
-        <div class="social-icons mt-3">
-          <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="text-white me-3"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-      </div>
-      <div class="col-md-4 mb-3">
-        <h5>Contact</h5>
-        <ul class="list-unstyled small">
-          <li><i class="fas fa-map-marker-alt me-2"></i> House No.31, Road No.29, Sector No.7, Uttara, Dhaka-1230</li>
-          <li><i class="fas fa-phone me-2"></i> +880 1616666776</li>
-          <li><i class="fas fa-envelope me-2"></i> masuma@jmgbd.com</li>
-        </ul>
-      </div>
-      <div class="col-md-4 mb-3">
-        <h5>Location</h5>
-        <div class="ratio ratio-4x3">
-          <iframe src="https://www.google.com/maps?q=House+No.31,+Road+No.29,+Sector+No.7,+Uttara,+Dhaka-1230,+Bangladesh&output=embed" allowfullscreen loading="lazy" style="border:0;"></iframe>
-        </div>
-      </div>
-    </div>
-    <div class="text-center mt-4 small">
-      &copy; 2025 R&M Denim. Developed by <strong>Sarzil Safoan</strong>.
+  <footer>
+    <div class="container" id="footer-contact">
+<div class="row">
+  <!-- Branding Column -->
+  <div class="col-lg-4 mb-4 fade-in">
+    <p class="text-muted">R&M Denim Limited.</p>
+  </div>
+
+
+  <!-- 📍 Google Maps Column (Now Last) -->
+  <div class="col-lg-4 col-md-4 mb-4 fade-in">
+    <h5>Our Location</h5>
+    <ul class="text">
+      <li><i class="fas fa-map-marker-alt me-2"></i> House No.31, Road No.29, Sector No.7, Uttara, Dhaka-1230, Bangladesh</li>
+    </ul>
+    <div class="ratio ratio-4x3">
+      <iframe
+        src="https://www.google.com/maps?q=House+No.31,+Road+No.29,+Sector+No.7,+Uttara,+Dhaka-1230,+Bangladesh&output=embed"
+        allowfullscreen
+        loading="lazy"
+        style="border:0;">
+      </iframe>
     </div>
   </div>
-</footer>
+</div>
+
+<div class="copyright text-center">
+  <p class="text mb-0">
+    <span class="d-block d-md-inline">&copy; 2025 R&M Denim. All rights reserved.</span>
+    <span class="d-block mt-2 d-md-inline ms-md-2">Developed by: <strong>Sarzil Safoan</strong></span>
+  </p>
+</div>
+
+    </div>
+  </footer>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
